<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/transaction_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/barlow_regular"
            android:text="@string/transaction_type"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/merchant_name"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/barlow_regular"
            android:text="@string/merchant_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_toEndOf="@id/transaction_type"
            />

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/barlow_regular"
            android:text="@string/points"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_toRightOf="@id/merchant_name"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/barlow_regular"
            android:padding="5dp"
            android:text="@string/date"
            android:textSize="16sp"
            android:layout_below="@+id/transaction_type"
            android:textColor="@color/grey" />



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#5F5DD8"
            android:layout_below="@id/date"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>