<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/reward_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="2dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher_background"
        android:background="@drawable/reward_icon_style"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reward_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/barlow_regular"
            android:gravity="center_horizontal"
            android:text="@string/reward_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/redeem_reward_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/barlow_regular"
            android:gravity="center_horizontal"
            android:text="@string/redeem_reward_message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/insufficient_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/barlow_regular"
            android:text="@string/insufficient_points"
            android:textAlignment="center"
            android:textColor="#ff0000"
            android:textSize="15dp" />


    </LinearLayout>


</RelativeLayout>